feat(tui-cli): view a bundle with no project context (#1628)